[package]
edition = "2021"
name = "domi"
resolver = "2"
version = "0.1.0"

[dependencies]
fxhash = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
	"HtmlElement",
	"Node",
	"NodeList",
	"Element",
	"Text",
	"Window",
	"Document",
	"Event",
	"DomStringMap",
]
version = "0.3"
