[package]
edition = "2021"
name = "domi"
resolver = "2"
version = "0.1.0"

[dependencies]
fxhash = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
features = [
	"HtmlElement",
	"Node",
	"NodeList",
	"Element",
	"Text",
	"Window",
	"Document",
	"Event",
	"DomStringMap",
]
version = "0.3"

[features]
default = []
promise = ["dep:wasm-bindgen-futures"]

[workspace]
members = [".", "examples/counter", "examples/http"]
