[package]
edition = "2021"
name = "http"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1"
domi = { path = "../.." }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"Element",
	"Response",
	"RequestInit",
	"RequestMode",
]
